--- a/ToDoList/Views/Home/Index.cshtml
+++ b/ToDoList/Views/Home/Index.cshtml
@@ -5,5 +5,6 @@
 <div class="container">
   <h1>Welcome to the To Do List!</h1>
   <p>@Html.ActionLink("See all items", "Index", "Items")</p> 
+  <p>@Html.ActionLink("See all categories", "Index", "Categories")</p>
 </div>
 
