--- a/ToDoList/wwwroot/css/styles.css
+++ b/ToDoList/wwwroot/css/styles.css
@@ -1,9 +1,5 @@
-div#footer {
-  position:fixed;
-  bottom:0px;
-  left:0px;
-  width:100%;
-  color:#CCC;
-  background:#333;
-  padding:8px;
+  
+body {
+  margin: 0 auto;
+  max-width: 1200px;
 }
